<resources>
    <string name="app_name">My Secret Todo</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="button">Button</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_default_adalah_admin">Password Default adalah "admin"</string>
</resources>
